--- a/style.css
+++ b/style.css
@@ -119,6 +119,14 @@ main{
     grid-template-columns: 1fr;
     }
 
+    header{
+         margin-top: 30px;  
+         /* Ajuste do espaço do header a borda */
+    }
+    .title{
+        place-self: start center;
+        transform: translateY(20%);
+    }
     .description{
         grid-column: 1;
         grid-row: 2;
@@ -134,6 +142,23 @@ main{
 
     footer{
         display: none;
+    }   
+ }
+
+ /* MOBILE */
+ @media (max-width:640px){
+    .description_title{
+        font-size: 10vw;
     }
-    
+    .description_text{
+        display: none;
+    }
+
+    .action{
+        width: 100%;
+        font-size: 10vw;
+    }
+    .pikachu{
+        width: 90vw;
+    }
  }
